--- a/caesar-cipher.html
+++ b/caesar-cipher.html
@@ -76,8 +76,7 @@
 
 				<ul id='lista-criptografias' class="lista-criptografias">
 
-					
-<!--
+
 					<li class="item-criptografado" ondblclick='testar(event)'>
 
 						<img id='chave-digital-criptografia' src="img/rsz_digital-encry-key.jpg">
@@ -109,8 +108,6 @@
 						<span class="mais-info-item-criptografado">⋮</span>
 
 					</li>
--->
-
 
 				</ul>
 
@@ -130,8 +127,6 @@
 							<strong>CRIPTO</strong> upq ouioe iuyei<br>
 							<hr>
 							<small>segunda-feira, 9 de abril 2018</small>
-						</p>
-
 
 
 					</div>
@@ -149,75 +144,17 @@
 				</div>
 			</div>
 
-
-
 		</section>
 
 	</div>
 
 
-
-	<script>
-		// Get the modal
-		var modal = document.getElementById('myModal');
-
-		// Get the button that opens the modal
-		var btns = document.getElementsByClassName("mais-info-item-criptografado");
-
-		// Get the <span> element that closes the modal
-		var span = document.getElementsByClassName("close")[0];
-
-		// When the user clicks the button, open the modal 
-
-		for (var i = 0; i < btns.length; i++) {
-			console.log(btns[i])
-			btns[i].onclick = function() {
-				modal.style.display = "block";
-			}
-		}
-
-		function maisInfoItemCriptografado(event) {
-			console.log(event.target);
-			modal.style.display = 'block';
-		}
-
-
-		// When the user clicks on <span> (x), close the modal
-		span.onclick = function() {
-			modal.style.display = "none";
-		}
-
-		// When the user clicks anywhere outside of the modal, close it
-		window.onclick = function(event) {
-			if (event.target == modal) {
-				modal.style.display = "none";
-			}
-		}
-
-	</script>
-
+	<script src="js/modal.js"></script>
 	<script src="js/historico_criptografias.js"></script>
 
 </body>
-<script>
-	
-	function heightMe() {
-		document.getElementById('content').style.height = window.innerHeight * 0.90 + 'px';
-	}
 
-
-	function setUp(event) {
-		console.log('setting up ...');
-		atualizarHistoricoCriptografias();
-	}
-
-	function testar(event) {
-		console.log(event);
-	}
-
-</script>
-
-
+<script src="js/onload.js"></script>
 
 
 </html>
